# project4

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
align/: align.py
test/: test_align.py
