[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "align"
authors = [{name = "Sebastian Cruz Gonzalez", email = "sebastian.cruzgonzalez@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "http://www.github.com/seba2550/project4"
